--- a/deployment/resources/ui.qrc
+++ b/deployment/resources/ui.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>ui/main.qml</file>
+        <file>ui/custom/Toast.qml</file>
     </qresource>
 </RCC>
