--- a/deployment/resources/ui.qrc
+++ b/deployment/resources/ui.qrc
@@ -1,8 +1,14 @@
 <RCC>
     <qresource prefix="/">
+        <file>ui/custom/ExtButton.qml</file>
+        <file>ui/custom/LeftBubble.qml</file>
         <file>ui/custom/Toast.qml</file>
+        <file>ui/utils/JSONListModel.qml</file>
         <file>ui/Main.qml</file>
+        <file>ui/Chat.qml</file>
+        <file>ui/ChatLog.qml</file>
         <file>ui/ForgotPassword.qml</file>
+        <file>ui/Home.qml</file>
         <file>ui/SignIn.qml</file>
         <file>ui/SignUp.qml</file>
         <file>ui/Splash.qml</file>
