+ Added CreateRoom where the users configures a chat group + Added a NewChat button to ChatLog page that takes the user to ContactSelection

--- a/deployment/resources/ui.qrc
+++ b/deployment/resources/ui.qrc
@@ -8,6 +8,7 @@
         <file>ui/Chat.qml</file>
         <file>ui/ChatLog.qml</file>
         <file>ui/ContactSelection.qml</file>
+        <file>ui/CreateRoom.qml</file>
         <file>ui/ForgotPassword.qml</file>
         <file>ui/Home.qml</file>
         <file>ui/SignIn.qml</file>
