Morteza Changes + Contact list page + Contact profile page

--- a/deployment/resources/ui.qrc
+++ b/deployment/resources/ui.qrc
@@ -9,6 +9,7 @@
         <file>ui/Chat.qml</file>
         <file>ui/ChatLog.qml</file>
         <file>ui/ContactList.qml</file>
+        <file>ui/ContactProfile.qml</file>
         <file>ui/ContactSelection.qml</file>
         <file>ui/CreateRoom.qml</file>
         <file>ui/ForgotPassword.qml</file>
