--- a/deployment/resources/img.qrc
+++ b/deployment/resources/img.qrc
@@ -6,6 +6,10 @@
         <file>img/btn_bar_new_chat_pressed.png</file>
         <file>img/btn_bar_new_contact.png</file>
         <file>img/btn_bar_new_contact_pressed.png</file>
+        <file>img/btn_bar_new_mail.png</file>
+        <file>img/btn_bar_new_mail_pressed.png</file>
+        <file>img/btn_bar_new_mail_server.png</file>
+        <file>img/btn_bar_new_mail_server_pressed.png</file>
         <file>img/btn_bar_return.png</file>
         <file>img/btn_bar_return_pressed.png</file>
         <file>img/btn_bar_settings.png</file>
@@ -13,6 +17,8 @@
         <file>img/bubble_left_green.png</file>
         <file>img/bubble_right_blue.png</file>
         <file>img/ic_contact.png</file>
+        <file>img/ic_gmail.png</file>
+        <file>img/ic_yahoomail.png</file>
         <file>img/Splash.png</file>
     </qresource>
 </RCC>
