--- a/deployment/resources/ui.qrc
+++ b/deployment/resources/ui.qrc
@@ -3,9 +3,11 @@
         <file>ui/custom/Bar.qml</file>
         <file>ui/custom/Bubble.qml</file>
         <file>ui/custom/ExtButton.qml</file>
+        <file>ui/custom/NumberCircle.qml</file>
         <file>ui/custom/Toast.qml</file>
         <file>ui/utils/JSONListModel.qml</file>
         <file>ui/Main.qml</file>
+        <file>ui/AddMailServer.qml</file>
         <file>ui/Chat.qml</file>
         <file>ui/ChatLog.qml</file>
         <file>ui/ContactList.qml</file>
@@ -14,6 +16,8 @@
         <file>ui/CreateRoom.qml</file>
         <file>ui/ForgotPassword.qml</file>
         <file>ui/Home.qml</file>
+        <file>ui/Mailbox.qml</file>
+        <file>ui/MailServers.qml</file>
         <file>ui/SignIn.qml</file>
         <file>ui/SignUp.qml</file>
         <file>ui/Splash.qml</file>
