+ Added UserProfile where name and email can be edited (but not the picture at the moment)

--- a/deployment/resources/ui.qrc
+++ b/deployment/resources/ui.qrc
@@ -23,5 +23,6 @@
         <file>ui/SignIn.qml</file>
         <file>ui/SignUp.qml</file>
         <file>ui/Splash.qml</file>
+        <file>ui/UserProfile.qml</file>
     </qresource>
 </RCC>
