--- a/deployment/resources/img.qrc
+++ b/deployment/resources/img.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
+        <file>img/btn_account.png</file>
+        <file>img/btn_account_pressed.png</file>
         <file>img/btn_bar_forward.png</file>
         <file>img/btn_bar_forward_pressed.png</file>
         <file>img/btn_bar_more.png</file>
