+ Added ChangePassword where password can be changed + Modified ContactSelection and added a TODO to the onClicked event

--- a/deployment/resources/ui.qrc
+++ b/deployment/resources/ui.qrc
@@ -8,6 +8,7 @@
         <file>ui/utils/JSONListModel.qml</file>
         <file>ui/Main.qml</file>
         <file>ui/AddMailServer.qml</file>
+        <file>ui/ChangePassword.qml</file>
         <file>ui/Chat.qml</file>
         <file>ui/ChatLog.qml</file>
         <file>ui/ComposeMail.qml</file>
