+ Added the Files page where user can view and manage files and folders + Added the FileSharing page where user can share a file or folder + Added image resources required by the two new pages

--- a/deployment/resources/ui.qrc
+++ b/deployment/resources/ui.qrc
@@ -16,6 +16,8 @@
         <file>ui/ContactProfile.qml</file>
         <file>ui/ContactSelection.qml</file>
         <file>ui/CreateRoom.qml</file>
+        <file>ui/Files.qml</file>
+        <file>ui/FileSharing.qml</file>
         <file>ui/ForgotPassword.qml</file>
         <file>ui/Home.qml</file>
         <file>ui/Mailbox.qml</file>
