--- a/deployment/resources/img.qrc
+++ b/deployment/resources/img.qrc
@@ -10,10 +10,16 @@
         <file>img/btn_bar_new_chat_pressed.png</file>
         <file>img/btn_bar_new_contact.png</file>
         <file>img/btn_bar_new_contact_pressed.png</file>
+        <file>img/btn_bar_new_file.png</file>
+        <file>img/btn_bar_new_file_pressed.png</file>
+        <file>img/btn_bar_new_folder.png</file>
+        <file>img/btn_bar_new_folder_pressed.png</file>
         <file>img/btn_bar_new_mail.png</file>
         <file>img/btn_bar_new_mail_pressed.png</file>
         <file>img/btn_bar_new_mail_server.png</file>
         <file>img/btn_bar_new_mail_server_pressed.png</file>
+        <file>img/btn_bar_paste.png</file>
+        <file>img/btn_bar_paste_pressed.png</file>
         <file>img/btn_bar_reply.png</file>
         <file>img/btn_bar_reply_pressed.png</file>
         <file>img/btn_bar_return.png</file>
@@ -22,11 +28,19 @@
         <file>img/btn_bar_send_pressed.png</file>
         <file>img/btn_bar_settings.png</file>
         <file>img/btn_bar_settings_pressed.png</file>
+        <file>img/btn_file_delete.png</file>
+        <file>img/btn_file_delete_pressed.png</file>
+        <file>img/btn_file_move.png</file>
+        <file>img/btn_file_move_pressed.png</file>
+        <file>img/btn_file_share.png</file>
+        <file>img/btn_file_share_pressed.png</file>
         <file>img/btn_signout.png</file>
         <file>img/btn_signout_pressed.png</file>
         <file>img/bubble_left_green.png</file>
         <file>img/bubble_right_blue.png</file>
         <file>img/ic_contact.png</file>
+        <file>img/ic_file.png</file>
+        <file>img/ic_folder.png</file>
         <file>img/ic_gmail.png</file>
         <file>img/ic_yahoomail.png</file>
         <file>img/Splash.png</file>
