--- a/deployment/resources/img.qrc
+++ b/deployment/resources/img.qrc
@@ -39,9 +39,11 @@
         <file>img/bubble_left_green.png</file>
         <file>img/bubble_right_blue.png</file>
         <file>img/ic_contact.png</file>
+        <file>img/ic_email.png</file>
         <file>img/ic_file.png</file>
         <file>img/ic_folder.png</file>
         <file>img/ic_gmail.png</file>
+        <file>img/ic_mailbox.png</file>
         <file>img/ic_yahoomail.png</file>
         <file>img/Splash.png</file>
     </qresource>
