--- a/deployment/resources/js.qrc
+++ b/deployment/resources/js.qrc
@@ -2,6 +2,8 @@
     <qresource prefix="/">
         <file>ui/utils/jsonpath.js</file>
         <file>ui/scripts/chat.js</file>
+        <file>ui/scripts/mail.js</file>
+        <file>ui/scripts/settings.js</file>
         <file>ui/scripts/ws.js</file>
     </qresource>
 </RCC>
